@@ -11,6 +11,7 @@ A......... [ZBXNEXT-1189] implemented the "selectTrigger", "selectParentDependen
 ..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)
 
 Bug fixes:
+A.F....... [ZBX-4915] fixed host group filtering without hosts or templates (Eduard)
 A......... [ZBXNEXT-1189] implemented permission checks for the "selectDependencies" service.get parameter (Pavels)
 ..F....... [ZBXNEXT-1189] fixed service ordering on the SLA report page (Pavels)
 ..F....... [ZBXNEXT-1189] fixed "Graph" links not being displayed for services with children on the SLA report page (Pavels)
